--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -54,5 +54,14 @@
                 android:layout_marginLeft="250dp"
                 android:layout_marginTop="80dp"
                 android:text="Share" />
+    <Button
+        android:id="@+id/btnhapus"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="260dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:text="delete"
+        />
 
 </android.support.v7.widget.CardView>
